Bug 397483 - Sendmail-type Sending account command does not take options
Summary: Sendmail-type Sending account command does not take options
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.8.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-15 10:58 UTC by Vishnu
Modified: 2018-08-16 06:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vishnu 2018-08-15 10:58:23 UTC
I have a couple of mail accounts, with sending configured using 'msmtp'. I am able to send emails on all of those accounts, via command-line, choosing each account as follows:

    $ echo "<Message>" | msmtp --account=<account_name> recipient@email.tld

But when I configure KMail to use this under Settings > Accounts > Sending, as 
a 'Sendmail'-like account (click on 'Add' in the same settings dialog), I get 
the error notification:

    E-Mail Sending Failed
    Failed to transport message. Failed to execute mailer program /usr/bin/
msmtp --account=<account_name>

Then again, it does work in one particular case. I have three accounts, and 
the msmtp configuration allows you to choose one of your accounts as the 
default. For the default account, the sendmail setting (in Kmail) is just '/
usr/bin/msmtp' (without the --account=<account_name>). And in that case it is 
able to send it.

Also, my mail, and its thread in the mailing-list, regarding the same issue:
https://marc.info/?l=kdepim-users&m=153427382718998&w=2
Comment 1 Laurent Montel 2018-08-15 16:24:49 UTC
indeed it can't support it.
I will fix it soon
Comment 2 Laurent Montel 2018-08-16 05:50:07 UTC
Git commit 7f0e1841fdc40e3d23274c871b9b092ee8fd3ac9 by Laurent Montel.
Committed on 16/08/2018 at 05:49.
Pushed by mlaurent into branch 'master'.

Allow to add mailtransport options

M  +1    -1    CMakeLists.txt
M  +3    -0    src/kmailtransport/mailtransport.kcfg

https://commits.kde.org/kmailtransport/7f0e1841fdc40e3d23274c871b9b092ee8fd3ac9
Comment 3 Laurent Montel 2018-08-16 06:12:43 UTC
Git commit 84429b2efc045e5941d986b05e5f976df7c1dfd8 by Laurent Montel.
Committed on 16/08/2018 at 06:12.
Pushed by mlaurent into branch 'master'.

Fix Bug 397483 - Sendmail-type Sending account command does not take options

FIXED-IN: 5.10.0

M  +1    -1    CMakeLists.txt
M  +1    -1    kdepim-addons.categories
M  +3    -0    kmailtransport/sendmail/CMakeLists.txt
M  +10   -2    kmailtransport/sendmail/sendmailjob.cpp
M  +11   -1    kmailtransport/sendmail/sendmailsettings.ui

https://commits.kde.org/kdepim-addons/84429b2efc045e5941d986b05e5f976df7c1dfd8