Fix Bug 397483 - Sendmail-type Sending account command does not take options

FIXED-IN: 5.10.0
BUG: 397483